# open-draft

./: .gitignore  .instructions.md  README.md
.github/workflows/: cpp-pr.yml  dotnet-pr.yml  java-pr.yml  pr.yml
cpp/: CMakeLists.txt  README.md
cpp/inc/: README.md
cpp/inc/private/core/: README.md
cpp/inc/private/lang/: README.md  float_utility.hpp  message_utility.hpp
cpp/inc/pub/: README.md  diagram.hpp  source_reference.hpp
cpp/inc/pub/lang/: keyword.hpp  message.hpp  source_reference.hpp  symbol.hpp  token.hpp  token_reader.hpp
cpp/inc/test/: testfx.hpp
cpp/src/: CMakeLists.txt
cpp/src/core/: CMakeLists.txt  README.md
cpp/src/lang/: CMakeLists.txt  README.md  comment_token.cpp  float_utility.cpp  identifier_token.cpp  keyword.cpp  keyword_token.cpp  message.cpp  message_id.cpp  message_utility.cpp  numeric_literal_token.cpp  severity.cpp  source_reference.cpp  string_literal_token.cpp  symbol.cpp  symbol_token.cpp  token.cpp  token_reader.cpp
cpp/test/: CMakeLists.txt  README.md
cpp/test/lang_ut/: CMakeLists.txt  comment_token_test.cpp  float_utility_test.cpp  identifier_token_test.cpp  keyword_token_test.cpp  main.cpp  message_id_test.cpp  message_test.cpp  numeric_literal_token_reader_test.cpp  numeric_literal_token_test.cpp  source_reference_test.cpp  string_literal_token_reader_test.cpp  string_literal_token_test.cpp  symbol_token_test.cpp  test_message_log.cpp  test_message_log.hpp  token_reader_test.cpp  token_reader_test_utility.cpp  token_reader_test_utility.hpp
cpp/test/lib/: CMakeLists.txt  assert_exception.cpp  asserts.cpp  test_class.cpp  test_context.cpp  test_result.cpp  test_runner.cpp  test_summary.cpp
docs/: README.md  language.md
java/: CMakeLists.txt  README.md  run-checkstyle.sh  run-tests.sh
java/config/: checkstyle-sun.xml
java/src/io/github/localtoast9001/opendraft/core/: Diagram.java  package-info.java
java/src/io/github/localtoast9001/opendraft/lang/: CommentToken.java  IdentifierToken.java  Keyword.java  KeywordToken.java  Message.java  MessageId.java  MessageSeverity.java  NumericLiteralToken.java  SourceReference.java  StringLiteralToken.java  Symbol.java  SymbolToken.java  Token.java  TokenReader.java  package-info.java
java/test/io/github/localtoast9001/opendraft/lang/test/: SourceReferenceTest.java  package-info.java
net/: Directory.Build.props  Directory.Packages.props  OpenDraft.slnx  README.md  stylecop.json  test.sh
net/OpenDraft.Core/: Diagram.cs  GroupShape.cs  Layer.cs  OpenDraft.Core.csproj  PathComponent.cs  PathShape.cs  PointShape.cs  Shape.cs
net/OpenDraft.Core.UnitTest/: MSTestSettings.cs  OpenDraft.Core.UnitTest.csproj
net/OpenDraft.Lang/: AddExpressionParseNode.cs  ArgumentParseNode.cs  ArrayExpressionParseNode.cs  BitwiseAndExpressionParseNode.cs  BitwiseOrExpressionParseNode.cs  BitwiseXorExpressionParseNode.cs  BlockStatementParseNode.cs  BreakStatementParseNode.cs  CallExpressionParseNode.cs  CallStatementParseNode.cs  ClassParseNode.cs  CommentToken.cs  ConditionalExpressionParseNode.cs  Constants.cs  ContinueStatementParseNode.cs  EnumMemberParseNode.cs  EnumParseNode.cs  EqualityExpressionParseNode.cs  ExpressionParseNode.cs  ForConditionParseNode.cs  ForStatementParseNode.cs  FunctionDeclarationParseNode.cs  FunctionParseNode.cs  IdentifierToken.cs  IfStatementParseNode.cs  ImportParseNode.cs  IndexExpressionParseNode.cs  InterfaceMemberParseNode.cs  InterfaceParseNode.cs  Keyword.cs  KeywordToken.cs  KeywordUtility.cs  LiteralExpressionParseNode.cs  LogicalAndExpressionParseNode.cs  LogicalOrExpressionParseNode.cs  MemberReferenceExpressionParseNode.cs  Message.cs  MessageId.cs  MessageSeverity.cs  MessageUtility.cs  (+32 more)
net/OpenDraft.Lang.UnitTest/: CommentTokenTests.cs  IdentifierTokenTests.cs  KeywordTokenTests.cs  MessageIdTests.cs  MessageTests.cs  MessageUtilityTests.cs  NumericLiteralTokenTests.cs  OpenDraft.Lang.UnitTest.csproj  ParserTests.cs  SourceReferenceTests.cs  StringLiteralTokenTests.cs  SymbolTokenTests.cs  TestMessageLog.cs  TokenReaderNumericLiteralTests.cs  TokenReaderStringLiteralTests.cs  TokenReaderTestUtility.cs  TokenReaderTests.cs
