cmake_minimum_required(VERSION 3.16)

project(open_draft_cpp LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(OPEN_DRAFT_CPP_LIB_OUTPUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../out/cpp/lib")
file(MAKE_DIRECTORY "${OPEN_DRAFT_CPP_LIB_OUTPUT_DIR}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${OPEN_DRAFT_CPP_LIB_OUTPUT_DIR}")
foreach(CONFIG_TYPE ${CMAKE_CONFIGURATION_TYPES})
	string(TOUPPER "${CONFIG_TYPE}" CONFIG_UPPER)
	set("CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONFIG_UPPER}" "${OPEN_DRAFT_CPP_LIB_OUTPUT_DIR}")
endforeach()

add_subdirectory(src)
add_subdirectory(test)
